# Dyxi_qt

./: .gitignore  Ano.qml  Board.qml  CMakeLists.txt  Ect.qml  Main.qml  Rectt.qml  Test.qml  images.qrc  lib.qrc  main.cpp  rectt.cpp  rectt.h
Lib/: Board.qml
Lib/Pages/: Dashboard.qml  Login.qml  ScrachPad.qml  Welcome.qml
Lib/Snippets/: Drawer.qml
Lib/src/: Auth.cpp  Auth.h  LoadConfig.cpp  LoadConfig.h
Lib/src/core/: AllString.h  errorreporter.cpp  errorreporter.h  settings.cpp  settings.h
